...
    static let authMessage = "Не удалось войти в систему"
    static let likeMessage = "Попробуйте еще раз"
    static let photoMessage = "Сервер передал данные с ошибкой"
    static let loadFullSizeImageErrorMessage = "Что-то пошло не так. Попробовать ещё раз?"
    static let tryAgainActionTitle = "Повторить"
    static let doNotActionTitle = "Не надо"
    static let logoutTitle = "Пока, пока!"
    static let logoutMessage = "Уверены, что хотите выйти?"
    static let yesActionTitle = "Да"
    static let noActionTitle = "Нет"
}

extension UIAlertController {
    
    static func getSomethingWentWrongAlert(with message: String) -> UIAlertController {
...
