...

final class AuthViewController: UIViewController {
    
    // MARK: - Constants
    enum Constants {
        static let loginButtonTitle = "Войти"
        static let loginButtonAccessibilityIdentifier = "Authenticate"
        static let loginButtonCornerRadius: CGFloat = 16
        
        static let buttonHeight: CGFloat = 48
        static let horizontalInset: CGFloat = 16
        static let bottomInset: CGFloat = 90
    }
...
