...
}

final class WebViewViewController: UIViewController & WebViewViewControllerProtocol {
    
    // MARK: - Constants
    enum Constants {
        static let webViewAccessibilityIdentifier = "UnsplashWebView"
    }
    
    // MARK: - Layout
    
    // MARK: - UI Elements
    private lazy var webView: WKWebView = {
...
