import UIKit
import Kingfisher

// MARK: - Constants
private enum ClassConstants {
    static let reuseIdentifier = "ImagesListCell"
    static let likeButtonAccessibilityIdentifier = "Like"
}

private enum Layout {
    static let cellImageCornerRadius: CGFloat = 16
    
    static let cellImageTop: CGFloat = 4
...
